# LabWarningSys

./: .gitattributes  .gitignore  FreeRTOS.md  LICENSE  README.md
ESP32S3/: CMakeLists.txt
ESP32S3/main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  cloud_report.c  cloud_report.h  idf_component.yml  lcd_bitbang.c  lcd_bitbang.h  lcd_i80_test.c  lcd_i80_test.h  lvgl_port.c  lvgl_port.h  main.c  onenet_mqtt.c  onenet_mqtt.h  sensor_data.h  touch_ft6336.c  touch_ft6336.h  ui_dashboard.c  ui_dashboard.h  wifi_sta.c  wifi_sta.h
FreeRTOS_test/: CMakeLists.txt  FreeRTOS_test.ioc
FreeRTOS_test/Core/Inc/: FreeRTOSConfig.h  main.h  start_task.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
FreeRTOS_test/Core/Src/: adc.c  gpio.c  main.c  start_task.c  stm32f1xx_it.c
FreeRTOS_test/cmake/: user-project.cmake
FreeRTOS_test/cmake/stm32cubemx/: CMakeLists.txt
FreeRTOS_test/scripts/: cubemx_post_generate.cmd  cubemx_post_generate.ps1
SequenceBackend/: DESIGN.md  README.md  app.py  dataset.py  demo_simulation.py  exporter.py  model_types.py  requirements.txt  risk.py  sequence_classifier.py  static_demo_app.py  static_state_model.py  test_demo_simulation.py  test_sequence_backend.py  test_static_demo.py  train_gru.py
miniprogram/: README.md  project.config.json  project.private.config.json
miniprogram/cloudfunctions/labAdminCleanup/: index.js  package.json
miniprogram/cloudfunctions/labIngest/: index.js  package.json
miniprogram/cloudfunctions/labMonitor/: config.js  index.js  package.json
miniprogram/miniprogram/: app.js  app.json
(+32 files in other folders)
